--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body{
     justify-content: center;
     align-items: center;
     color: var(--main-color);
+    z-index: 999;
 }
 .rating-color
 {
