--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,18 @@ body{
     color: var(--main-color);
     z-index: 999;
 }
+.navbar-nav .nav-link.active,
+.navbar-nav .show > .nav-link {
+  border-radius: 0.5rem;
+  background-color: var(--main-color);
+  color: white;
+}
+.nav-link{
+  border: transparent;
+  color: white;
+  background-color: rgba(26, 188, 156,0);
+  border-radius: 0.5rem;
+}
 .rating-color
 {
     color: var(--rating-color);
